feat: Add appointment status
